# 3DEmotionDescriptors

./: .gitignore  README.md
classifier/: CMakeLists.txt  classifier.cpp
emotionRecog/: common.cpp  common.hpp
emotionRecog/data_grabber/: CMakeLists.txt  data_grabber.cpp
emotionRecog/python_classifier/: classifier.py  tester_rf.py  tester_svm.py
emotionRecog/tester/: CMakeLists.txt  tester.cpp
emotionRecog/tester_commandline/: tester.cpp
emotionRecog/tester_live/: tester.cpp
emotionRecog/trainer/: CMakeLists.txt  train_model.cpp
histogram_gene/: CMakeLists.txt  VFH_features.cpp
preprocessing/: passthrough.cpp
visualizer/: CMakeLists.txt  visu.cpp
